--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,13 +24,14 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>           
+        </div>           
     </nav> 
 
                             <!-- Use to generate background images -->  
         
     <img class="hero" src="r.Pic/digital-marketing-meeting.jpg"/>
-                            <!-- Use to generate panels 1 - 3 images and language -->
+
+                            <!-- Use to generate panels 1 - 3 images and verbage -->
     <div class="content">
 
         <div class="search-engine-optimization">
@@ -55,7 +56,7 @@
             </p>
         </div>
     </div>
-                            <!-- Use to generate panel 4 images and language-->
+                            <!-- Use to generate panel 4 images and verbage-->
 
     <div class="benefits">
         <div class="benefit">
@@ -80,12 +81,12 @@
             </p>
         </div>
     </div>
-    <nav class="footer">
+        <nav class="footer"> 
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </nav>
+        </nav>    
     </main> 
 </body>
 
