--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="code refractor.css">
-    <title>website</title>
+    <title>Horiseon Refactor</title>
 </head>
 
 <body>
@@ -32,30 +32,30 @@
     <img class="hero" src="r.Pic/digital-marketing-meeting.jpg"/>
 
                             <!-- Use to generate panels 1 - 3 images and verbage -->
-    <div class="content">
+    <main class="content">
 
-        <div class="search-engine-optimization">
+        <section class="search-engine-optimization">
             <img src="r.Pic/search-engine-optimization.jpg" class="float-left" ALT="Image of wooden table with notebook in the center (with Seo written on it) a laptop on the top right corner and coffee drink on button left"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="r.Pic/online-reputation-management.jpg" class="float-right" ALT="Image of person looking over stats on a laptop, the word reputation is on the screen"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="r.Pic/social-media-marketing.jpg" class="float-left" ALT="table with a group discussing social media" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
                             <!-- Use to generate panel 4 images and verbage-->
 
     <div class="benefits">
